# tuber

./: .gitignore  PLAN.md  README.md  pyproject.toml
src/tuber/: __init__.py  cli.py  geometry.py  structure.py  writers.py
src/tuber.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli.py  test_geometry.py  test_structure.py  test_writers.py
