[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tuber"
version = "0.1.0"
description = "Generate finite carbon nanotube structures from chiral indices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "biotite>=1.0",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
tuber = "tuber.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
